# rion

./: Cargo.toml  Makefile  README.md  config.toml  rion.paw
demo/: example.js  index.html  management.html  stream.js
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: mod.rs  room.rs  token.rs  transceive.rs  user.rs
src/middleware/: error_handler.rs  jwt.rs  mod.rs
src/pkg/: catch.rs  mod.rs  publisher.rs  subscriber.rs
src/pkg/state/: impls.rs  mod.rs  state.rs  traits.rs
src/state/: mod.rs
src/util/: api_error.rs  config.rs  grace_shutdown.rs  jwt.rs  logger.rs  mod.rs  serde_format.rs  util.rs
