[package]
name = "rion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
bincode = "2.0.0-rc.2"
block-id = "0.2.1"
chrono = { version = "0.4.31", features = ["serde"] }
hyper = "1.0.1"
hyper-util = { version = "0.1.1", features = ["tokio", "server-auto", "http1"] }
jsonwebtoken = "9.1.0"
nats = "0.24.1"
once_cell = "1.18.0"
redis = { version = "0.23.3", features = ["tokio-comp"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
thiserror = "1.0.50"
time = { version = "0.3.14", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "time", "json"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
# WebRTC
webrtc = { git = "https://github.com/webrtc-rs/webrtc", rev = "361acc4" }
